# noiseless

./: .gitignore  README.md  api.py  main.py  portfolio.py  pyproject.toml  stats.json
money_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/money_cli/: main.py  portfolio.py
src/money_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
